syntax = "proto3";

option go_package = "github.com/Megidy/eventsMicroservice/common/events";

service EventService {
    rpc CreateEvent (CreateEventRequest) returns (CreateEventResponse);
    rpc UpdateEvent (UpdateEventRequest) returns (UpdateEventResponse);
    rpc GetEvent (GetEventByIDRequest) returns (GetEventByIDResponse);
  }
  message Player{
    int64 eventID =1;
    int64 playerID =2 ;
    string player_name =3;
    string email =4;
  }
  message Event {
    int64 id = 1;
    string name = 2;
    string date = 3;
    repeated Player players = 4; 
  }
message CreateEventRequest {   
    Event event =1;
  }
  
message CreateEventResponse {
    string status = 1;
  }
  
message UpdateEventRequest {
    int64 id = 1;
    Event event = 2;
  }
message UpdateEventResponse {
    string status=1;
}

  
message GetEventByIDRequest{
    int64 id =1;
}
message GetEventByIDResponse{
    Event event =1;
}